--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 requires-python = "==3.12.*"
 # https://packaging.python.org/en/latest/specifications/version-specifiers/#id5
 dependencies = [
+    "onnxruntime @ https://repo.radeon.com/rocm/manylinux/rocm-rel-7.0/onnxruntime_rocm-1.22.1-cp312-cp312-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl",
     "ctranslate2>=4.5.0",
     "fastapi>=0.121.1",
     "faster-whisper>=1.1.1",
