--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "faster-whisper>=1.1.1",
     "huggingface-hub[hf-transfer]>=0.33.4",
     "kokoro-onnx[gpu]>=0.4.5,<0.5.0",
-    "numpy>=2.3.1",
+    "numpy==1.26.4",
     "piper-tts>=1.3.0",
     "pydantic-settings>=2.10.1",
     "pydantic>=2.11.7",
@@ -94,7 +94,7 @@ markers = [
 required-version = "~=0.8.14"
 constraint-dependencies = ["llvmlite>=0.40.0"]
 # TODO: create an issue on https://github.com/thewh1teagle/kokoro-onnx regarding this
-override-dependencies = ["onnxruntime-gpu>=1.22.0 ; platform_machine == 'x86_64'", "onnxruntime>=1.22.0 ; platform_machine != 'x86_64'"]
+override-dependencies = ["onnxruntime>=1.22.0 ; platform_machine != 'x86_64'"]
 
 # [tool.uv.sources]
 # piper-phonemize = [
